--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
                     <a href="">
                         <li class="Ta1">Hoja de vida</li>
                     </a>
-                    <a href="https://www.figma.com/file/HoiFILUQE9gtL0MyJuUs59/Untitled">
+                    <a href="">
                         <li class="Ta2">Figma Hoja de vida </li>
                     </a>
                     <a href="">
@@ -67,14 +67,16 @@
                 </ul>
             </article>
         </section>
-        <footer class="Links">
-
-            <a href="https://github.com/HarolPJ"> <img src="Imagenes/logo-github.png" alt="Github"></a>
-            <a href="https://neocities.org/dashboard"><img src="Imagenes/neocities.png" alt="Neocities"></a>
-
-        </footer>
 
     </div>
+
+    
+    <footer class="Links" style="margin-top: 100px">
+
+        <a href="https://github.com/HarolPJ"> <img src="Imagenes/logo-github.png" alt="Github"></a>
+        <a href="https://neocities.org/dashboard"><img src="Imagenes/neocities.png" alt="Neocities"></a>
+
+    </footer>
 
 </body>
 
