--- a/Index.html
+++ b/Index.html
@@ -22,11 +22,11 @@
             <article class="talleres">
                 <h2 class="Titaller">Talleres</h2>
                 <ul>
-                    <a href="">
+                    <a href="file:///C:/Users/HAROL/Documents/IUE/Sexto%20Semestre/Programacion%20Web-Movil/Portafolio(Clase)/Portafolio(Hoja)/index.html">
                         <li class="Ta1">Hoja de vida</li>
                     </a>
-                    <a href="">
-                        <li class="Ta2">Figma Hoja de vida </li>
+                    <a href="https://www.figma.com/file/HoiFILUQE9gtL0MyJuUs59/Untitled">
+                        <li class="Ta2"> Diseño en Figma (Hoja de vida) </li>
                     </a>
                     <a href="">
                         <li class="Ta3">FlashCard</li>
