--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
                     <a href="https://www.figma.com/file/HoiFILUQE9gtL0MyJuUs59/Untitled">
                         <li class="Ta2"> Diseño en Figma (Hoja de vida) </li>
                     </a>
-                    <a href="">
+                    <a href="file:///C:/Users/HAROL/Documents/IUE/Sexto%20Semestre/Programacion%20Web-Movil/Portafolio(Clase)/Flashcard/index.html">
                         <li class="Ta3">FlashCard</li>
                     </a>
                     <a href="">
